tests/negative/type_template_missing_arg.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: shablon argumenti yetishmaydi
ulash "uzpp_runtime.hpp"
butun asosiy() {
    vektor v;
    qaytarish 0;
}
